#112: Fix How your Money is Spent Block Icon and Description Alignment (#124)

--- a/src/theme/css/frontend/donate-page/_audit.scss
+++ b/src/theme/css/frontend/donate-page/_audit.scss
@@ -45,8 +45,8 @@
 				@apply font-normal text-px18 leading-px22;
 			}
 
-			@screen lg {
-				@apply text-px22 leading-px32;
+			@screen lg { 
+				@apply text-px22 leading-px32 min-h-px128;
 			}
 
 		}
